added ToS and Privacy Policy pages.

--- a/Pages/case-study3.html
+++ b/Pages/case-study3.html
@@ -57,9 +57,9 @@
                             <div class="collapse navbar-collapse show clearfix" id="navbarSupportedContent">
                                 <ul class="navigation clearfix">
                                     <li class="current"><a href="../index.html">Home</a></li>
-                                    <li><a href="../index.html#service">Services</a></li>
-                                    <li><a href="../index.html#blog">Blog</a></li>
-                                    <li><a href="index.html">Contact Us</a></li>
+                                    <!-- <li><a href="../index.html#service">Services</a></li> -->
+                                    <li><a href="../index.html#case-study">Case Studies</a></li>
+                                    <li><a href="./contact-us.html">Contact Us</a></li>
                                 </ul>
                             </div>
                         </nav>
@@ -231,7 +231,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-6 col-sm-12 footer-column">
+                        <!-- <div class="col-lg-3 col-md-6 col-sm-12 footer-column">
                             <div class="footer-widget links-widget">
                                 <div class="widget-title">
                                     <h3>Featured Services</h3>
@@ -244,7 +244,7 @@
                                     </ul>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="col-lg-3 col-md-6 col-sm-12 footer-column">
                             <div class="footer-widget contact-widget">
                                 <div class="widget-title">
