--- a/Pages/terms-of-service.html
+++ b/Pages/terms-of-service.html
@@ -122,84 +122,124 @@
     <section class="blog-content">
         <div class="auto-container">
             <div class="sec-title">
-                <h2>Accelerating New Product Development Research using NLPU</h2>
+                <h2>Terms of Service</h2>
             </div>
-            <div class="blog-image" >
+            <!-- <div class="blog-image" >
                 <figure>
                     <img src="../assets//images/blog/digitalproddev.png">
                 </figure>
-            </div>
+            </div> -->
             <div class="content">
                 <div class="sub-section">
                     <div class="sub-title">
-                        <h3>Domain</h3>
+                        <h3>1. Terms</h3>
                     </div>
                     <div class="sub-content">
                         <p>
-                            Automotive R&D
+                            By accessing this Website, accessible from https://www.pinheadanalytics.com, you are agreeing to be bound by these Website Terms and Conditions of Use and agree that you are responsible for the agreement with any applicable local laws. If you disagree with any of these terms, you are prohibited from accessing this site. The materials contained in this Website are protected by copyright and trade mark law.
                         </p>
                     </div>
                 </div>
                 <div class="sub-section">
                     <div class="sub-title">
-                        <h3>Customer type</h3>
+                        <h3>2. Use License</h3>
                     </div>
                     <div class="sub-content">
                         <p>
-                            Enterprise Fortune 500 company
+                            Permission is granted to temporarily download one copy of the materials on Pinhead analytics's Website for personal, non-commercial transitory viewing only. This is the grant of a license, not a transfer of title, and under this license you may not:
+                        </p>
+                        <ul>
+                            <li>
+                                modify or copy the materials;
+                            </li>
+                            <li>
+                                use the materials for any commercial purpose or for any public display;
+                            </li>
+                            <li>
+                                attempt to reverse engineer any software contained on Pinhead analytics's Website;
+                            </li>
+                            <li>
+                                remove any copyright or other proprietary notations from the materials; or
+                            </li>
+                            <li>
+                                transferring the materials to another person or "mirror" the materials on any other server.
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="sub-section">
+                    <div class="sub-title">
+                        <h3>3. Disclaimer</h3>
+                    </div>
+                    <div class="sub-content">
+                        <p>
+                            All the materials on Pinhead analytics's Website are provided "as is". Pinhead analytics makes no warranties, may it be expressed or implied, therefore negates all other warranties. Furthermore, Pinhead analytics does not make any representations concerning the accuracy or reliability of the use of the materials on its Website or otherwise relating to such materials or any sites linked to this Website.
                         </p>
                     </div>
                 </div>
                 <div class="sub-section">
                     <div class="sub-title">
-                        <h3>Situation</h3>
+                        <h3>4. Limitations</h3>
                     </div>
                     <div class="sub-content">
                         <p>
-                            New Product Development in the automotive industry is a research & capital-intensive process. It takes, on an average, 2 years for an automotive company to study, ideate & come up with the design for the initial prototype. It takes an equal amount of time to then build, test, improvize and get the vehicle ready for a market launch.
-                        </p>
-                        <p>
-                            A lot of engineering conversations that dominate the initial R&D days tend to be repetitive and time-consuming. There’s usually a lot of data in the form of paperwork and documentation from the previous design cycles that can provide immensely valuable insights. Yet, studying them thoroughly would extend the design cycle even further.
+                            Pinhead analytics or its suppliers will not be hold accountable for any damages that will arise with the use or inability to use the materials on Pinhead analytics’s Website, even if Pinhead analytics or an authorize representative of this Website has been notified, orally or written, of the possibility of such damage. Some jurisdiction does not allow limitations on implied warranties or limitations of liability for incidental damages, these limitations may not apply to you.
                         </p>
                     </div>
                 </div>
                 <div class="sub-section">
                     <div class="sub-title">
-                        <h3>Resolution</h3>
+                        <h3>5. Revisions and Errata</h3>
                     </div>
                     <div class="sub-content">
                         <p>
-                            We utilized state-of-the-art Machine Learning and Natural Language Processing concepts to build an ideation engine. 
-                        </p>
-                        <p>
-                            The end-to-end process that we adopted to arrive at the solution is as follows:
-                            <ul>
-                                <li>
-                                    Thoroughly analyze existing engineering text data and label them according to the nature of the problem.
-                                </li>
-                                <li>
-                                    A Transformer that would study from this labelled dataset and learn to automatically label future engineering conversations thereby reducing dependency on Subject matter experts.
-                                </li>
-                                <li>
-                                    Build a complex AI engine that implements an NLP model using the technique of word embedding to which the labelled data would be fed.
-                                </li>
-                                <li>
-                                    This engine would analyze and extract the learning outcomes of these conversations and interprets the associated risk.
-                                </li>
-                                <li>
-                                    The insights gained would then be communicated to researches through a User-interface enabling them make quick decisions.
-                                </li>
-                            </ul>
+                            The materials appearing on Pinhead analytics's Website may include technical, typographical, or photographic errors. Pinhead analytics will not promise that any of the materials in this Website are accurate, complete, or current. Pinhead analytics may change the materials contained on its Website at any time without notice. Pinhead analytics does not make any commitment to update the materials.
                         </p>
                     </div>
                 </div>
                 <div class="sub-section">
                     <div class="sub-title">
-                        <h3>Impact</h3>
+                        <h3>6. Links</h3>
                     </div>
                     <div class="sub-content">
                         <p>
-                            The system has not only reduced the duration of the design cycle in half, but also has resulted in significant cost savings for the R&D department. The client is also in plans to implement the solution for all their future R&D processes.
+                            Pinhead analytics has not reviewed all of the sites linked to its Website and is not responsible for the contents of any such linked site. The presence of any link does not imply endorsement by Pinhead analytics of the site. The use of any linked website is at the user's own risk.
+                        </p>
+                    </div>
+                </div>
+                <div class="sub-section">
+                    <div class="sub-title">
+                        <h3>
+                            7. Site Terms of Use Modifications
+                        </h3>
+                    </div>
+                    <div class="sub-content">
+                        <p>
+                            Pinhead analytics may revise these Terms of Use for its Website at any time without prior notice. By using this Website, you are agreeing to be bound by the current version of these Terms and Conditions of Use.
+                        </p>
+                    </div>
+                </div>
+                <div class="sub-section">
+                    <div class="sub-title">
+                        <h3>
+                            8. Your Privacy
+                        </h3>
+                    </div>
+                    <div class="sub-content">
+                        <p>
+                            Please read our Privacy Policy.
+                        </p>
+                    </div>
+                </div>
+                <div class="sub-section">
+                    <div class="sub-title">
+                        <h3>
+                            9. Governing Law
+                        </h3>
+                    </div>
+                    <div class="sub-content">
+                        <p>
+                            Any claim related to Pinhead analytics's Website shall be governed by the laws of in without regards to its conflict of law provisions.
                         </p>
                     </div>
                 </div>
@@ -277,7 +317,7 @@
             </div>
             <div class="footer-bottom clearfix">
                 <div class="copyright pull-left">
-                    <p><a href="index.html">Pinhead Analaytics</a> &copy; 2022 All Right Reserved</p>
+                    <p><a href="index.html">Pinhead Analytics</a> &copy; 2022 All Right Reserved</p>
                 </div>
                 <ul class="footer-nav pull-right">
                     <li><a href="index.html">Terms of Service</a></li>
