--- a/Pages/contact-us.html
+++ b/Pages/contact-us.html
@@ -181,9 +181,10 @@
                                 </div>
                                 <div class="widget-content">
                                     <ul>
-                                        <li><a href="../index.html">Home</a></li>
-                                        <li><a href="../index.html#case-study">Case Study</a></li>
-                                        <li><a href="contactUs.html">Contact Us</a></li>
+                                        <li class="current"><a href="../index.html">Home</a></li>
+                                        <!-- <li><a href="../index.html#service">Services</a></li> -->
+                                        <li><a href="../index.html#case-study">Case Studies</a></li>
+                                        <li><a href="./contact-us.html">Contact Us</a></li>
                                     </ul>
                                 </div>
                             </div>
