--- a/Pages/case-study1.html
+++ b/Pages/case-study1.html
@@ -59,7 +59,7 @@
                                     <li class="current"><a href="../index.html">Home</a></li>
                                     <!-- <li><a href="../index.html#service">Services</a></li> -->
                                     <li><a href="../index.html#case-study">Case Studies</a></li>
-                                    <li><a href="./contact-us.html">Contact Us</a></li>
+                                    <li><a href="contact-us.html">Contact Us</a></li>
                                 </ul>
                             </div>
                         </nav>
@@ -92,7 +92,7 @@
         <div class="close-btn"><i class="fas fa-times"></i></div>
 
         <nav class="menu-box">
-            <div class="nav-logo"><a href="../index.html"><img src="assets/images/logo-w.svg" alt="" title=""></a></div>
+            <div class="nav-logo"><a href="../index.html"><img src="../assets/images/logo-w.svg" alt="" title=""></a></div>
             <div class="menu-outer">
                 <!--Here Menu Will Come Automatically Via Javascript / Same Menu as in Header-->
             </div>
@@ -215,7 +215,7 @@
                     <div class="row clearfix">
                         <div class="col-lg-3 col-md-6 col-sm-12 footer-column">
                             <div class="footer-widget logo-widget">
-                                <figure class="footer-logo"><a href="index.html"><img src="../assets/images/logo.svg"
+                                <figure class="footer-logo"><a href="../index.html"><img src="../assets/images/logo.svg"
                                             alt=""></a></figure>
                                 <div class="text">
                                     <p>Augment your data team with experts who can both set up the infrastructure & extract valuable insights.</p>
@@ -225,14 +225,13 @@
                         <div class="col-lg-3 col-md-6 col-sm-12 footer-column">
                             <div class="footer-widget links-widget">
                                 <div class="widget-title">
-                                    <h3>Important Links</h3>
+                                    <h3>Quick Links</h3>
                                 </div>
                                 <div class="widget-content">
                                     <ul>
                                         <li><a href="../index.html">Home</a></li>
-                                        <li><a href="../index.html#service">Services</a></li>
-                                        <li><a href="../index.html#blog">Blogs</a></li>
-                                        <li><a href="../index.html">Contact Us</a></li>
+                                        <li><a href="../index.html#case-study">Case Studies</a></li>
+                                    <li><a href="contact-us.html">Contact Us</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -277,11 +276,11 @@
             </div>
             <div class="footer-bottom clearfix">
                 <div class="copyright pull-left">
-                    <p><a href="index.html">Pinhead Analaytics</a> &copy; 2022 All Right Reserved</p>
+                    <p><a href="../index.html">Pinhead Analytics</a> &copy; 2022 All Right Reserved</p>
                 </div>
                 <ul class="footer-nav pull-right">
-                    <li><a href="index.html">Terms of Service</a></li>
-                    <li><a href="index.html">Privacy Policy</a></li>
+                    <li><a href="terms-of-service.html">Terms of Service</a></li>
+                    <li><a href="Privacy-Policy.html">Privacy Policy</a></li>
                 </ul>
             </div>
         </div>
