--- a/Pages/case-study3.html
+++ b/Pages/case-study3.html
@@ -219,14 +219,13 @@
                         <div class="col-lg-3 col-md-6 col-sm-12 footer-column">
                             <div class="footer-widget links-widget">
                                 <div class="widget-title">
-                                    <h3>Important Links</h3>
+                                    <h3>Quick Links</h3>
                                 </div>
                                 <div class="widget-content">
                                     <ul>
                                         <li><a href="../index.html">Home</a></li>
-                                        <li><a href="../index.html#service">Services</a></li>
-                                        <li><a href="../index.html#blog">Blogs</a></li>
-                                        <li><a href="../index.html">Contact Us</a></li>
+                                        <li><a href="../index.html#case-study">Case Studies</a></li>
+                                    <li><a href="contact-us.html">Contact Us</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -271,11 +270,11 @@
             </div>
             <div class="footer-bottom clearfix">
                 <div class="copyright pull-left">
-                    <p><a href="index.html">Pinhead Analaytics</a> &copy; 2022 All Right Reserved</p>
+                    <p><a href="../index.html">Pinhead Analytics</a> &copy; 2022 All Right Reserved</p>
                 </div>
                 <ul class="footer-nav pull-right">
-                    <li><a href="index.html">Terms of Service</a></li>
-                    <li><a href="index.html">Privacy Policy</a></li>
+                    <li><a href="terms-of-service.html">Terms of Service</a></li>
+                    <li><a href="Privacy-Policy.html">Privacy Policy</a></li>
                 </ul>
             </div>
         </div>
