--- a/index.html
+++ b/index.html
@@ -991,8 +991,8 @@
                     <p><a href="index.html">Pinhead Analytics</a> &copy; 2022 All Right Reserved</p>
                 </div>
                 <ul class="footer-nav pull-right">
-                    <li><a href="index.html">Terms of Service</a></li>
-                    <li><a href="index.html">Privacy Policy</a></li>
+                    <li><a href="Pages/terms-of-service.html">Terms of Service</a></li>
+                    <li><a href="Pages/Privacy-Policy.html">Privacy Policy</a></li>
                 </ul>
             </div>
         </div>
