--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                 <ul class="navigation clearfix">
                                     <li class="current"><a href="index.html">Home</a></li>
                                     <li><a href="#case-study">Case Studies</a></li>
-                                    <li><a href="Pages/contactUs.html">Contact Us</a></li>
+                                    <li><a href="Pages/contact-us.html">Contact Us</a></li>
                                 </ul>
                             </div>
                         </nav>
@@ -957,7 +957,7 @@
                                     <ul>
                                         <li><a href="index.html">Home</a></li>
                                         <li><a href="#case-study">Case Studies</a></li>
-                                        <li><a href="Pages/contactUs.html">Contact Us</a></li>
+                                        <li><a href="Pages/contact-us.html">Contact Us</a></li>
                                     </ul>
                                 </div>
                             </div>
