--- a/Pages/Privacy-Policy.html
+++ b/Pages/Privacy-Policy.html
@@ -148,7 +148,7 @@
                     </div>
                 </div>
                 <div class="sub-section">
-                    <div class="sub-title">
+                    <div class="sec-title">
                         <h2>Interpretation and Definitions</h2>
                     </div>
                     <div class="sub-title">
@@ -204,7 +204,7 @@
                     </div>
                 </div>
                 <div class="sub-section">
-                    <div class="sub-title">
+                    <div class="sec-title">
                         <h2>Collecting and Using Your Personal Data</h2>
                     </div>
                     <div class="sub-title">
@@ -455,7 +455,7 @@
                     </div>
                 </div>
                 <div class="sub-section">
-                    <div class="sub-title">
+                    <div class="sec-title">
                         <h2>Children's Privacy</h2>
                     </div>
                     <div class="sub-content">
@@ -468,7 +468,7 @@
                     </div>
                 </div>
                 <div class="sub-section">
-                    <div class="sub-title">
+                    <div class="sec-title">
                         <h2>
                             Links to Other Websites
                         </h2>
@@ -483,7 +483,7 @@
                     </div>
                 </div>
                 <div class="sub-section">
-                    <div class="sub-title">
+                    <div class="sec-title">
                         <h2>
                             Changes to this Privacy Policy
                         </h2>
@@ -501,7 +501,7 @@
                     </div>
                 </div>
                 <div class="sub-section">
-                    <div class="sub-title">
+                    <div class="sec-title">
                         <h2>
                             Contact Us
                         </h2>
