--- a/index.html
+++ b/index.html
@@ -102,9 +102,7 @@
             <div class="contact-info">
                 <h4>Contact Info</h4>
                 <ul>
-                    <!-- <li>C406 NG Complex, Off, Military Rd, Marol, Andheri East, Mumbai, Maharashtra
-                        400072</li> -->
-                    <!-- <li><a href="tel:+919305679342">+919305679342</a></li> -->
+                    <li>Pinhead Analytics Private Limited, Diamond District, Old Airport Raod, Kodihalli, Bangalore - 560008.</li>
                     <li><a href="mailto:contact@pinheadanalytics.com">contact@pinheadanalytics.com</a></li>
                 </ul>
             </div>
@@ -498,14 +496,14 @@
                         <div class="inner-box">
                             <div class="image-holder">
                                 <figure class="image-box">
-                                    <img src="assets/images/gallery/pr-1.svg" alt="">
+                                    <img src="../assets//images/blog/npd.png" alt="">
                                 </figure>
-                                <a href="assets/images/gallery/pr-1.svg" class="lightbox-image view-btn"
+                                <a href="ages/case-study1.html" class="lightbox-image view-btn"
                                     data-fancybox="gallery"><i class="fas fa-search-plus"></i></a>
                             </div>
                             <div class="lower-content">
                                 <h3><a href="Pages/case-study1.html">Accelerating New Product Development Research using NLPU</a></h3>
-                                <span>June 2021</span>
+                                <span>December 2021</span>
                             </div>
                         </div>
                     </div>
@@ -515,14 +513,14 @@
                         <div class="inner-box">
                             <div class="image-holder">
                                 <figure class="image-box">
-                                    <img src="assets/images/gallery/pr-2.svg" alt="">
+                                    <img src="../assets//images/blog/prodreco.png" alt="">
                                 </figure>
-                                <a href="assets/images/gallery/pr-2.svg" class="lightbox-image view-btn"
+                                <a href="Pages/case-study2.html" class="lightbox-image view-btn"
                                     data-fancybox="gallery"><i class="fas fa-search-plus"></i></a>
                             </div>
                             <div class="lower-content">
                                 <h3><a href="Pages/case-study2.html">Hyperpersonalized Product Promotion for eCommerce using Advanced Machine Learning</a></h3>
-                                <span>July 2021</span>
+                                <span>November 2021</span>
                             </div>
                         </div>
                     </div>
@@ -532,48 +530,14 @@
                         <div class="inner-box">
                             <div class="image-holder">
                                 <figure class="image-box">
-                                    <img src="assets/images/gallery/pr-3.svg" alt="">
+                                    <img src="../assets//images/blog/senti.png" alt="">
                                 </figure>
-                                <a href="assets/images/gallery/pr-3.svg" class="lightbox-image view-btn"
+                                <a href="Pages/case-study3.html" class="lightbox-image view-btn"
                                     data-fancybox="gallery"><i class="fas fa-search-plus"></i></a>
                             </div>
                             <div class="lower-content">
                                 <h3><a href="Pages/case-study3.html">Sentiment Classification using NLP techniques to optimize Customer Experience</a>
                                 </h3>
-                                <span>August 2021</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-12 project-block">
-                    <div class="project-block-one wow fadeInUp" data-wow-delay="500ms" data-wow-duration="700ms">
-                        <div class="inner-box">
-                            <div class="image-holder">
-                                <figure class="image-box">
-                                    <img src="assets/images/gallery/pr-4.svg" alt="">
-                                </figure>
-                                <a href="assets/images/gallery/pr-4.svg" class="lightbox-image view-btn"
-                                    data-fancybox="gallery"><i class="fas fa-search-plus"></i></a>
-                            </div>
-                            <div class="lower-content">
-                                <h3><a href="Pages/case-study4.html">Optimizing the quality of online courses through effective evaluation techniques</a></h3>
-                                <span>August 2021</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-12 project-block">
-                    <div class="project-block-one wow fadeInUp" data-wow-delay="500ms" data-wow-duration="700ms">
-                        <div class="inner-box">
-                            <div class="image-holder">
-                                <figure class="image-box">
-                                    <img src="assets/images/gallery/pr-5.svg" alt="">
-                                </figure>
-                                <a href="assets/images/gallery/pr-5.svg" class="lightbox-image view-btn"
-                                    data-fancybox="gallery"><i class="fas fa-search-plus"></i></a>
-                            </div>
-                            <div class="lower-content">
-                                <h3><a href="Pages/case-study5.html">Building and deployment of a smart News Recommendation System</a></h3>
                                 <span>October 2021</span>
                             </div>
                         </div>
@@ -584,14 +548,48 @@
                         <div class="inner-box">
                             <div class="image-holder">
                                 <figure class="image-box">
-                                    <img src="assets/images/gallery/pr-6.svg" alt="pr-6">
+                                    <img src="../assets//images/blog/course.png" alt="">
                                 </figure>
-                                <a href="assets/images/gallery/pr-6.svg" class="lightbox-image view-btn"
+                                <a href="Pages/case-study4.html" class="lightbox-image view-btn"
+                                    data-fancybox="gallery"><i class="fas fa-search-plus"></i></a>
+                            </div>
+                            <div class="lower-content">
+                                <h3><a href="Pages/case-study4.html">Optimizing the quality of online courses through effective evaluation techniques</a></h3>
+                                <span>October 2021</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 project-block">
+                    <div class="project-block-one wow fadeInUp" data-wow-delay="500ms" data-wow-duration="700ms">
+                        <div class="inner-box">
+                            <div class="image-holder">
+                                <figure class="image-box">
+                                    <img src="../assets//images/blog/media.png" alt="">
+                                </figure>
+                                <a href="Pages/case-study5.html" class="lightbox-image view-btn"
+                                    data-fancybox="gallery"><i class="fas fa-search-plus"></i></a>
+                            </div>
+                            <div class="lower-content">
+                                <h3><a href="Pages/case-study5.html">Building and deployment of a smart News Recommendation System</a></h3>
+                                <span>September 2021</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 project-block">
+                    <div class="project-block-one wow fadeInUp" data-wow-delay="500ms" data-wow-duration="700ms">
+                        <div class="inner-box">
+                            <div class="image-holder">
+                                <figure class="image-box">
+                                    <img src="../assets//images/blog/CV.png" alt="pr-6">
+                                </figure>
+                                <a href="Pages/case-study6.html" class="lightbox-image view-btn"
                                     data-fancybox="gallery"><i class="fas fa-search-plus"></i></a>
                             </div>
                             <div class="lower-content">
                                 <h3><a href="Pages/case-study6.html">Identifying owner information of speeding vehicles using computer vision</a></h3>
-                                <span>November 2021</span>
+                                <span>August 2021</span>
                             </div>
                         </div>
                     </div>
@@ -939,7 +937,7 @@
             <div class="footer-top">
                 <div class="widget-section wow fadeInUp" data-wow-delay="0ms" data-wow-duration="700ms">
                     <div class="row clearfix">
-                        <div class="col-lg-3 col-md-6 col-sm-12 footer-column">
+                        <div class="col-lg-4 col-md-4 col-sm-12 footer-column">
                             <div class="footer-widget logo-widget">
                                 <figure class="footer-logo"><a href="index.html"><img src="assets/images/logo.svg"
                                             alt=""></a></figure>
@@ -948,7 +946,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-6 col-sm-12 footer-column">
+                        <div class="col-lg-4 col-md-4 col-sm-12 footer-column">
                             <div class="footer-widget links-widget">
                                 <div class="widget-title">
                                     <h3>Quick Links</h3>
@@ -962,16 +960,14 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-6 col-sm-12 footer-column">
+                        <div class="col-lg-4 col-md-4 col-sm-12 footer-column">
                             <div class="footer-widget contact-widget">
                                 <div class="widget-title">
                                     <h3>Contact Info</h3>
                                 </div>
                                 <div class="widget-content">
                                     <ul>
-                                        <!-- <li>C406 NG Complex, Off, Military Rd, Marol, Andheri East, Mumbai, Maharashtra
-                                            400072</li>
-                                        <li><a href="tel:+919305679342">+919305679342</a></li> -->
+                                        <li>Pinhead Analytics Private Limited, Diamond District, Old Airport Raod, Kodihalli, Bangalore - 560008.</li>
                                         <li><a href="mailto:contact@pinheadanalytics.com">contact@pinheadanalytics.com</a></li>
                                     </ul>
                                 </div>
