--- a/Pages/Privacy-Policy.html
+++ b/Pages/Privacy-Policy.html
@@ -99,9 +99,7 @@
             <div class="contact-info">
                 <h4>Contact Info</h4>
                 <ul>
-                    <!-- <li>C406 NG Complex, Off, Military Rd, Marol, Andheri East, Mumbai, Maharashtra
-                        400072</li> -->
-                    <!-- <li><a href="tel:+919305679342">+919305679342</a></li> -->
+                    <li>Pinhead Analytics Private Limited, Diamond District, Old Airport Raod, Kodihalli, Bangalore - 560008.</li>
                     <li><a href="mailto:contact@pinheadanalytics.com">contact@pinheadanalytics.com</a></li>
                 </ul>
             </div>
@@ -530,7 +528,7 @@
             <div class="footer-top">
                 <div class="widget-section wow fadeInUp" data-wow-delay="0ms" data-wow-duration="700ms">
                     <div class="row clearfix">
-                        <div class="col-lg-3 col-md-6 col-sm-12 footer-column">
+                        <div class="col-lg-4 col-md-4 col-sm-12 footer-column">
                             <div class="footer-widget logo-widget">
                                 <figure class="footer-logo"><a href="index.html"><img src="../assets/images/logo.svg"
                                             alt=""></a></figure>
@@ -539,7 +537,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-6 col-sm-12 footer-column">
+                        <div class="col-lg-4 col-md-4 col-sm-12 footer-column">
                             <div class="footer-widget links-widget">
                                 <div class="widget-title">
                                     <h3>Quick Links</h3>
@@ -553,7 +551,7 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- <div class="col-lg-3 col-md-6 col-sm-12 footer-column">
+                        <!-- <div class="col-lg-4 col-md-4 col-sm-12 footer-column">
                             <div class="footer-widget links-widget">
                                 <div class="widget-title">
                                     <h3>Featured Services</h3>
@@ -567,16 +565,14 @@
                                 </div>
                             </div>
                         </div> -->
-                        <div class="col-lg-3 col-md-6 col-sm-12 footer-column">
+                        <div class="col-lg-4 col-md-4 col-sm-12 footer-column">
                             <div class="footer-widget contact-widget">
                                 <div class="widget-title">
                                     <h3>Contact Info</h3>
                                 </div>
                                 <div class="widget-content">
                                     <ul>
-                                        <!-- <li>C406 NG Complex, Off, Military Rd, Marol, Andheri East, Mumbai, Maharashtra
-                                            400072</li>
-                                        <li><a href="tel:+919305679342">+919305679342</a></li> -->
+                                        <li>Pinhead Analytics Private Limited, Diamond District, Old Airport Raod, Kodihalli, Bangalore - 560008.</li>
                                         <li><a href="mailto:contact@pinheadanalytics.com">contact@pinheadanalytics.com</a></li>
                                     </ul>
                                 </div>
