--- a/Pages/case-study3.html
+++ b/Pages/case-study3.html
@@ -99,9 +99,7 @@
             <div class="contact-info">
                 <h4>Contact Info</h4>
                 <ul>
-                    <!-- <li>C406 NG Complex, Off, Military Rd, Marol, Andheri East, Mumbai, Maharashtra
-                        400072</li> -->
-                    <!-- <li><a href="tel:+919305679342">+919305679342</a></li> -->
+                    <li>Pinhead Analytics Private Limited, Diamond District, Old Airport Raod, Kodihalli, Bangalore - 560008.</li>
                     <li><a href="mailto:contact@pinheadanalytics.com">contact@pinheadanalytics.com</a></li>
                 </ul>
             </div>
@@ -126,7 +124,7 @@
             </div>
             <div class="blog-image" >
                 <figure>
-                    <img src="../assets//images/blog/AdobeStock_214539382-1800x0-c-default.jpeg">
+                    <img src="../assets//images/blog/senti.png">
                 </figure>
             </div>
             <div class="content">
@@ -207,7 +205,7 @@
             <div class="footer-top">
                 <div class="widget-section wow fadeInUp" data-wow-delay="0ms" data-wow-duration="700ms">
                     <div class="row clearfix">
-                        <div class="col-lg-3 col-md-6 col-sm-12 footer-column">
+                        <div class="col-lg-4 col-md-4 col-sm-12 footer-column">
                             <div class="footer-widget logo-widget">
                                 <figure class="footer-logo"><a href="index.html"><img src="../assets/images/logo.svg"
                                             alt=""></a></figure>
@@ -216,7 +214,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-6 col-sm-12 footer-column">
+                        <div class="col-lg-4 col-md-4 col-sm-12 footer-column">
                             <div class="footer-widget links-widget">
                                 <div class="widget-title">
                                     <h3>Quick Links</h3>
@@ -230,7 +228,7 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- <div class="col-lg-3 col-md-6 col-sm-12 footer-column">
+                        <!-- <div class="col-lg-4 col-md-4 col-sm-12 footer-column">
                             <div class="footer-widget links-widget">
                                 <div class="widget-title">
                                     <h3>Featured Services</h3>
@@ -244,16 +242,14 @@
                                 </div>
                             </div>
                         </div> -->
-                        <div class="col-lg-3 col-md-6 col-sm-12 footer-column">
+                        <div class="col-lg-4 col-md-4 col-sm-12 footer-column">
                             <div class="footer-widget contact-widget">
                                 <div class="widget-title">
                                     <h3>Contact Info</h3>
                                 </div>
                                 <div class="widget-content">
                                     <ul>
-                                        <!-- <li>C406 NG Complex, Off, Military Rd, Marol, Andheri East, Mumbai, Maharashtra
-                                            400072</li>
-                                        <li><a href="tel:+919305679342">+919305679342</a></li> -->
+                                        <li>Pinhead Analytics Private Limited, Diamond District, Old Airport Raod, Kodihalli, Bangalore - 560008.</li>
                                         <li><a href="mailto:contact@pinheadanalytics.com">contact@pinheadanalytics.com</a></li>
                                     </ul>
                                 </div>
